examples/langda_test/history/DoubleDC_5Round/test_history/pl___robot:rough.pl_run3/#test_results_result.txt
Error evaluating Problog model:
    result = action(s, pos)
             ^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 370, in _token_dot
    raise UnexpectedCharacter(s, pos)
problog.parser.UnexpectedCharacter: Unexpected character '.' at 30:86.Error evaluating Problog model:
    target = self.ground(db, query, target, label=label)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 341, in ground
    raise NonGroundQuery(term, db.lineno(term.location))
problog.errors.NonGroundQuery: Query term still contains variables after grounding for query at(X3,X4,s(s(s(0)))) at 60:7.Error evaluating Problog model:
    target = self.ground(db, query, target, label=label)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 341, in ground
    raise NonGroundQuery(term, db.lineno(term.location))
problog.errors.NonGroundQuery: Query term still contains variables after grounding for query at(X3,X4,s(s(s(0)))) at 60:7.